<resources>
    <string name="app_name">FinalAsm</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="booki">BookI</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="read_it_together">Read it together</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="guest">Continue as guest</string>
    <string name="sign_up">Sign up </string>
    <string name="stay_strong">Stay strong together</string>
    <string name="volunteer">Become a volunteer</string>
    <string name="forget_password">Forget Password.?</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>