<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/WelcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/colorBackground"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/readItTogetherTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/WelcomeTextView"
            android:layout_marginTop="10dp"
            android:text="@string/stay_strong"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/loginBtn"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/readItTogetherTextView"
            android:orientation="vertical">

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/colorTextView"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/password"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/colorTextView"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="start"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:clickable="true"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_above="@+id/asGuest"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_drawable"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/asGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/guest"
            android:textColor="@color/colorTextView"
            android:textSize="15sp" />

    </RelativeLayout>

</RelativeLayout>