<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/WelcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorSecondaryOrange"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/readItTogetherTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/WelcomeTextView"
            android:layout_marginTop="10dp"
            android:text="First step to become a master chef"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/sign_upBtn"
            android:layout_below="@+id/readItTogetherTextView"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/userFirstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstName"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorTextView"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="15sp"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/userLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastName"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorTextView"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="15sp"
                    android:layout_weight="1"/>

            </LinearLayout>


            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/colorTextView"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/colorTextView"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_upBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_above="@+id/asGuest"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_drawable_orange"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/asGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:textColor="@color/colorTextView"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>